<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/asosiy" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_save_file"
            android:title="@string/saqlanganlar" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_settings"
            android:title="@string/sozlamalar" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="@string/ulashish" />
        <item
            android:id="@+id/o_app"
            android:icon="@drawable/ic_information"
            android:title="@string/dastur_haqida" />

    </group>
</menu>