<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/openFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smssherlar.ui.home.HomeFragment"
        android:label="@string/asosiy"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.smssherlar.ui.gallery.GalleryFragment"
        android:label="@string/saqlanganlar"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.smssherlar.ui.slideshow.SlideshowFragment"
        android:label="@string/sozlamalar"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/openFragment"
        android:name="com.example.smssherlar.fragments.OpenFragment"
        android:label="fragment_open"
        tools:layout="@layout/fragment_open" />
</navigation>